--- a/assets/components/less/mystyles.less
+++ b/assets/components/less/mystyles.less
@@ -61,13 +61,19 @@ a{
 	background-color: darken(@gray-light,0%);
 }
 .hrow{
-	// margin-top: @line-height-computed;
 	margin-bottom: @line-height-computed;
 	border-top: 2px solid;
 	border-bottom: 2px solid;
 	border-color: lighten(black, 30%);
 }
 .votes{
-	// font-size: 1.5em;
 	line-height: 2.1em;
+}
+#toTop{
+	background-color: @gray-darker;
+	color: white;
+	position: fixed;
+	right: 1em;
+	bottom: 2em;
+	z-index: 100000;
 }
